--- a/scss/modules/_modern.scss
+++ b/scss/modules/_modern.scss
@@ -8,12 +8,14 @@
       margin-bottom: 22px;
       font-family: "BBCReith Bold";
       font-size: 20px;
+      letter-spacing: 2.42px;
       color: #fbfdff;
     }
     &_text {
       color: #fbfdff;
       font-family: "Noto Sans Regular";
       font-size: 17px;
+      line-height: 32px;
       padding-right: 217px;
       &_span {
         font-family: "Noto Sans Bold";
