--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,11 @@
 }
 
 @font-face {
+  font-family: "BBCReith Medium";
+  src: url(/fonts/BBCReithSerif_W_Md.woff);
+}
+
+@font-face {
   font-family: "Noto Sans Regular";
   src: url(/fonts/NotoSans-Regular.ttf);
 }
@@ -151,5 +156,53 @@ ul {
   background-image: url(/images/bg.png);
   background-repeat: no-repeat;
   background-position: right center;
+}
+
+.vorteile {
+  background: #fbfbfc;
+}
+
+.vorteile__title {
+  font-family: "BBCReith Medium";
+  font-size: 28px;
+  line-height: 40px;
+  letter-spacing: 4.42px;
+  text-align: center;
+  margin-top: 67px;
+  margin-bottom: 42px;
+}
+
+.vorteile__content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.vorteile__content_list {
+  width: 32%;
+  height: 136px;
+  background: #ffffff;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 16px;
+  color: #45494f;
+  margin-top: 9px;
+  margin-right: 7px;
+  position: relative;
+}
+
+.vorteile__content_list_icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 35px;
+}
+
+.vorteile__content_list_text {
+  font-family: "Noto Sans Regular";
+  font-size: 19px;
+  line-height: 32px;
+  padding-left: 120px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 /*# sourceMappingURL=styles.css.map */
