--- a/scss/_utilites.scss
+++ b/scss/_utilites.scss
@@ -4,6 +4,11 @@
 }
 
 @font-face {
+  font-family: "BBCReith Medium";
+  src: url(/fonts/BBCReithSerif_W_Md.woff);
+}
+
+@font-face {
   font-family: "Noto Sans Regular";
   src: url(/fonts/NotoSans-Regular.ttf);
 }
