--- a/css/styles.css
+++ b/css/styles.css
@@ -205,4 +205,15 @@ ul {
   top: 50%;
   transform: translateY(-50%);
 }
+
+.hauptmerk__title {
+  text-align: center;
+  font-family: "BBCReith Medium";
+  font-size: 28px;
+  line-height: 40px;
+  letter-spacing: 4.42px;
+  color: #020303;
+  margin-top: 100px;
+  margin-bottom: 71px;
+}
 /*# sourceMappingURL=styles.css.map */
