--- a/scss/modules/_hauptmerk.scss
+++ b/scss/modules/_hauptmerk.scss
@@ -1,4 +1,5 @@
 .hauptmerk {
+  background-color: #ffffff;
   &__title {
     text-align: center;
     font-family: "BBCReith Medium";
@@ -10,9 +11,20 @@
     margin-bottom: 71px;
   }
   &__content {
-  }
-  &__list {
-    &_item {
+    &_list {
+      padding-left: 52px;
+      &_item {
+        font-family: "Noto Sans Regular";
+        list-style: none;
+        font-size: 17px;
+        line-height: 35px;
+        letter-spacing: -0.4px;
+        color: #45494f;
+        display: flex;
+        &_span {
+          font-family: "Noto Sans Bold";
+        }
+      }
     }
   }
 }
