--- a/scss/_utilites.scss
+++ b/scss/_utilites.scss
@@ -1,21 +1,21 @@
 @font-face {
   font-family: "BBCReith Bold";
-  src: url(/fonts/BBCReithSerif_W_Bd.woff);
+  src: url(./fonts/BBCReithSerif_W_Bd.woff);
 }
 
 @font-face {
   font-family: "BBCReith Medium";
-  src: url(/fonts/BBCReithSerif_W_Md.woff);
+  src: url(./fonts/BBCReithSerif_W_Md.woff);
 }
 
 @font-face {
   font-family: "Noto Sans Regular";
-  src: url(/fonts/NotoSans-Regular.ttf);
+  src: url(./fonts/NotoSans-Regular.ttf);
 }
 
 @font-face {
   font-family: "Noto Sans Bold";
-  src: url(/fonts/NotoSans-Bold.ttf);
+  src: url(./fonts/NotoSans-Bold.ttf);
 }
 
 li > a {
