--- a/scss/modules/_spezial.scss
+++ b/scss/modules/_spezial.scss
@@ -4,7 +4,7 @@
   &__left {
     margin-left: 126px;
     width: 556px;
-    &_title {
+    &__title {
       font-family: "BBCReith Bold";
       color: #1652ac;
       font-size: 20px;
@@ -12,7 +12,7 @@
       letter-spacing: 2.42px;
       padding-right: 95px;
     }
-    &_text {
+    &__text {
       font-family: "Noto Sans Regular";
       font-size: 17px;
       line-height: 32px;
@@ -21,8 +21,8 @@
       }
     }
   }
-  &_right {
-    background-image: url(/images/bg.png);
+  &__right {
+    background-image: url("../images/bg.png");
     background-repeat: no-repeat;
     background-position: right center;
   }
