--- a/scss/_energ.scss
+++ b/scss/_energ.scss
@@ -1,5 +1,8 @@
 .energ {
+  @include flexRow;
   &__right {
+    width: 50%;
+    padding-left: 50px;
     &_title {
       font-family: "BBCReith Bold";
       font-size: 20px;
@@ -16,5 +19,8 @@
         font-family: "Noto Sans Bold";
       }
     }
+  }
+  &__left {
+    width: 50%;
   }
 }
