--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -18,8 +18,7 @@
   }
 
   &__content {
-    display: flex;
-    flex-direction: row;
+    @include flexRow;
     margin-top: 23px;
     margin-bottom: 24px;
     &_left {
@@ -35,27 +34,6 @@
       }
       &_line {
         @include line;
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 989px) {
-  .header {
-    &__content {
-      display: flex;
-      flex-direction: column;
-      &_left {
-        &_title {
-          font-size: 34px;
-          line-height: 40px;
-          text-align: center;
-          letter-spacing: -0.4px;
-        }
-        &_line {
-          margin-left: 50%;
-          transform: translateX(-50%);
-        }
       }
     }
   }
