--- a/scss/_spezial.scss
+++ b/scss/_spezial.scss
@@ -1,10 +1,11 @@
 .spezial {
+  @include flexRow;
   height: 480px;
-  flex-wrap: nowrap;
   &__left {
+    left: 50%;
     margin-left: 126px;
     width: 556px;
-    &__title {
+    &_title {
       font-family: "BBCReith Bold";
       color: #1652ac;
       font-size: 20px;
@@ -12,7 +13,7 @@
       letter-spacing: 2.42px;
       padding-right: 95px;
     }
-    &__text {
+    &_text {
       font-family: "Noto Sans Regular";
       font-size: 17px;
       line-height: 32px;
@@ -22,6 +23,7 @@
     }
   }
   &__right {
+    width: 50%;
     background-image: url("../images/bg.png");
     background-repeat: no-repeat;
     background-position: right center;
