--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,12 +1,13 @@
 @import "mixins";
 @import "utilites";
-@import "modules/header";
-@import "modules/energ";
-@import "modules/modern";
-@import "modules/spezial";
-@import "modules/vorteile";
-@import "modules/hauptmerk";
-@import "modules/bilder";
-@import "modules/besucher";
-@import "modules/kontakt";
-@import "modules/footer";
+@import "header";
+@import "energ";
+@import "modern";
+@import "spezial";
+@import "vorteile";
+@import "hauptmerk";
+@import "bilder";
+@import "besucher";
+@import "kontakt";
+@import "footer";
+@import "media";
