--- a/scss/_besucher.scss
+++ b/scss/_besucher.scss
@@ -11,6 +11,7 @@
   }
   &_content {
     &_btn {
+      width: 33%;
       font-family: "BBCReith Medium";
       background: linear-gradient(180deg, #0c5cd6 0%, rgba(0, 56, 140, 0) 100%),
         #004fc7;
