--- a/scss/_bilder.scss
+++ b/scss/_bilder.scss
@@ -9,7 +9,8 @@
     line-height: 40px;
   }
   &__slide {
-    margin-left: 25%;
+    width: 50%;
+    @include center;
     &_nav {
       display: flex;
       &_btn {
