--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,8 +1,12 @@
 .footer {
+  @include flexRow;
   margin-bottom: 56px;
   font-family: "Noto Sans Regular";
   font-size: 17px;
   color: #9eabbb;
+  &__box {
+    width: 25%;
+  }
   &__title {
     font-family: "Noto Sans Bold";
     color: #a3adba;
