--- a/scss/_kontakt.scss
+++ b/scss/_kontakt.scss
@@ -1,43 +1,56 @@
 .kontakt {
   margin-top: 155px;
   margin-bottom: 126px;
-  &__title {
-    font-family: "BBCReith Bold";
-    font-size: 34px;
-    line-height: 43px;
-    letter-spacing: -0.4px;
-    color: #1652ac;
-    margin-top: 73px;
+  @include flexRow;
+  &__left {
+    width: 40%;
+    &_title {
+      font-family: "BBCReith Bold";
+      font-size: 34px;
+      line-height: 43px;
+      letter-spacing: -0.4px;
+      color: #1652ac;
+      margin-top: 73px;
+    }
   }
-  &__text {
-    font-family: "Noto Sans Regular";
-    font-size: 17px;
-    line-height: 32px;
-    letter-spacing: -0.4px;
-    color: #464c53;
-    padding-right: 40px;
-    &_btn {
-      background: linear-gradient(180deg, #0c5cd6 0%, rgba(0, 56, 140, 0) 100%),
-        #004fc7;
-      font-family: "BBCReith Medium";
-      font-size: 18px;
-      line-height: 26px;
-      color: #ffffff;
-      border: 1px solid #ffffff;
-      box-sizing: border-box;
-      box-shadow: 0px 1px 4px rgba(48, 67, 133, 0.5);
-      border-radius: 12px;
-      width: 306px;
-      height: 69px;
-      position: relative;
-      &_arrows {
-        position: absolute;
-        left: 0;
-        top: 0;
+  &__center {
+    width: 40%;
+    padding: 20px;
+    &_text {
+      font-family: "Noto Sans Regular";
+      font-size: 17px;
+      line-height: 32px;
+      letter-spacing: -0.4px;
+      color: #464c53;
+      &_btn {
+        background: linear-gradient(
+            180deg,
+            #0c5cd6 0%,
+            rgba(0, 56, 140, 0) 100%
+          ),
+          #004fc7;
+        font-family: "BBCReith Medium";
+        font-size: 18px;
+        line-height: 26px;
+        color: #ffffff;
+        border: 1px solid #ffffff;
+        box-sizing: border-box;
+        box-shadow: 0px 1px 4px rgba(48, 67, 133, 0.5);
+        border-radius: 12px;
+        width: 306px;
+        height: 69px;
+        position: relative;
+        &_arrows {
+          position: absolute;
+          left: 0;
+          top: 0;
+        }
       }
     }
   }
   &__logo1 {
+    width: 20%;
     margin-top: 60px;
+    padding-left: 40px;
   }
 }
