--- a/scss/_besucher.scss
+++ b/scss/_besucher.scss
@@ -8,6 +8,7 @@
     letter-spacing: 2.42px;
     padding-top: 78px;
     padding-bottom: 31px;
+    color: #020303;
   }
   &_content {
     &_btn {
