--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -10,6 +10,7 @@
   &__title {
     font-family: "Noto Sans Bold";
     color: #a3adba;
+    font-size: 17px;
   }
   &__textdekor {
     text-decoration: underline;
