--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -35,4 +35,158 @@
       width: 100%;
     }
   }
+  .modern {
+    margin-top: 66px;
+    margin-bottom: 91px;
+    @include flexCol;
+    &__right {
+      &_title {
+        margin-top: 39px;
+        margin-bottom: 16px;
+        font-size: 18px;
+      }
+      &_text {
+        font-size: 16px;
+      }
+    }
+    &__left {
+      &_img {
+        width: 100%;
+      }
+    }
+  }
+  .spezial {
+    display: flex;
+    flex-direction: column-reverse;
+    &__left {
+      padding-right: 10%;
+      &_title {
+        font-size: 18px;
+      }
+      &_text {
+        font-size: 17px;
+      }
+    }
+    &__right {
+      background-image: none;
+    }
+  }
+  .vorteile {
+    background: #fbfbfc;
+    &__title {
+      font-family: "BBCReith Medium";
+      font-size: 28px;
+      line-height: 40px;
+      letter-spacing: 4.42px;
+      text-align: center;
+      margin-top: 67px;
+      margin-bottom: 42px;
+    }
+    &__content {
+      @include flexCol;
+      &_list {
+        width: 100%;
+      }
+      &_text {
+        padding-right: 50px;
+      }
+    }
+  }
+  .hauptmerk {
+    &__title {
+      font-size: 20px;
+      margin-top: 46px;
+      margin-bottom: 37px;
+    }
+    &__content {
+      @include flexCol;
+      &_list {
+        &_item {
+          font-size: 16px;
+        }
+      }
+    }
+  }
+  .bilder {
+    &__title {
+      margin-top: 32px;
+      margin-bottom: 18px;
+      font-size: 20px;
+    }
+    &__slide {
+      width: 100%;
+      &_nav {
+        display: none;
+      }
+    }
+  }
+  .besucher {
+    &__title {
+      font-size: 20px;
+      padding-top: 68px;
+      padding-bottom: 3px;
+    }
+    &_content {
+      &_btn {
+        width: 100%;
+        height: 64px;
+        font-size: 16px;
+      }
+    }
+  }
+  .kontakt {
+    margin-top: 155px;
+    margin-bottom: 126px;
+    @include flexCol;
+    &__left {
+      width: 100%;
+      &_title {
+        font-size: 26px;
+        margin-top: 27px;
+        text-align: center;
+      }
+    }
+    &__center {
+      width: 100%;
+      &_text {
+        font-size: 16px;
+        &_btn {
+          width: 100%;
+          height: 69px;
+        }
+      }
+    }
+    &__logo1 {
+      width: 100%;
+      margin-top: 20px;
+      padding-left: 0;
+      text-align: center;
+    }
+  }
+  .footer {
+    @include flexCol;
+    margin-bottom: 10px;
+    font-size: 16px;
+    &__box {
+      width: 100%;
+    }
+    &__title {
+      font-family: "Noto Sans Bold";
+      color: #a3adba;
+      font-size: 16px;
+    }
+    &__textdekor {
+      text-decoration: underline;
+    }
+    &__black {
+      color: black;
+    }
+    &__grey {
+      color: #9eabbb;
+      text-decoration: underline;
+    }
+    &__pad {
+      height: 0;
+    }
+  }
 }
