--- a/scss/_spezial.scss
+++ b/scss/_spezial.scss
@@ -12,6 +12,7 @@
       line-height: 40px;
       letter-spacing: 2.42px;
       padding-right: 95px;
+      text-align: center;
     }
     &_text {
       font-family: "Noto Sans Regular";
