--- a/css/styles.css
+++ b/css/styles.css
@@ -22,10 +22,6 @@
   width: 1200px;
 }
 
-li > a {
-  color: #45494f;
-}
-
 ul {
   margin-top: 7px;
 }
@@ -62,10 +58,6 @@ img {
   border: 2px solid #eaedf5;
   box-sizing: border-box;
   border-radius: 8px;
-}
-
-.header__nav_item {
-  padding: 5px;
 }
 
 .header__content {
@@ -182,6 +174,7 @@ img {
   line-height: 40px;
   letter-spacing: 2.42px;
   padding-right: 95px;
+  text-align: center;
 }
 
 .spezial__left_text {
@@ -217,7 +210,7 @@ img {
 
 .vorteile__content {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .vorteile__content_list {
@@ -444,6 +437,9 @@ img {
 }
 
 @media screen and (max-width: 989px) {
+  .container {
+    width: 720px;
+  }
   .mobile_none {
     display: none;
   }
@@ -499,7 +495,9 @@ img {
     flex-direction: column-reverse;
   }
   .spezial__left {
-    padding-right: 10%;
+    margin-right: 20%;
+    margin-left: 10%;
+    width: 100%;
   }
   .spezial__left_title {
     font-size: 18px;
@@ -508,7 +506,13 @@ img {
     font-size: 17px;
   }
   .spezial__right {
+    width: 100%;
     background-image: none;
+  }
+  .spezial__right_gradient {
+    height: 64px;
+    margin-top: 30px;
+    background: linear-gradient(90deg, #ff3d3d, #3636ff);
   }
   .vorteile {
     background: #fbfbfc;
@@ -621,6 +625,30 @@ img {
   }
   .footer__pad {
     height: 0;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .container {
+    width: 576px;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .container {
+    width: 375px;
+  }
+  .header__content img {
+    width: 370px;
+  }
+  .energ img {
+    width: 370px;
+  }
+  .modern {
+    margin-bottom: 250px;
+  }
+  .modern img {
+    width: 370px auto;
   }
 }
 /*# sourceMappingURL=styles.css.map */
