--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,4 +1,7 @@
 @media screen and (max-width: 989px) {
+  .container {
+    width: 720px;
+  }
   .mobile_none {
     display: none;
   }
@@ -59,7 +62,9 @@
     display: flex;
     flex-direction: column-reverse;
     &__left {
-      padding-right: 10%;
+      margin-right: 20%;
+      margin-left: 10%;
+      width: 100%;
       &_title {
         font-size: 18px;
       }
@@ -68,7 +73,23 @@
       }
     }
     &__right {
+      width: 100%;
       background-image: none;
+      &_gradient {
+        height: 64px;
+        margin-top: 30px;
+        background: -webkit-linear-gradient(
+          90deg,
+          rgb(255, 61, 61),
+          rgb(54, 54, 255)
+        );
+        background: -moz-linear-gradient(
+          90deg,
+          rgb(255, 61, 61),
+          rgb(54, 54, 255)
+        );
+        background: linear-gradient(90deg, rgb(255, 61, 61), rgb(54, 54, 255));
+      }
     }
   }
   .vorteile {
@@ -187,6 +208,30 @@
     }
     &__pad {
       height: 0;
+    }
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .container {
+    width: 576px;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .container {
+    width: 375px;
+  }
+  .header__content img {
+    width: 370px;
+  }
+  .energ img {
+    width: 370px;
+  }
+  .modern {
+    margin-bottom: 250px;
+    img {
+      width: 370px auto;
     }
   }
 }
